<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/warm_up_time"
        android:textAlignment="center"
        android:gravity="center_horizontal">

    </TextView>


    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="10"
        android:textAlignment="center"
        android:gravity="center_horizontal">

    </EditText>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/training_time"
        android:textAlignment="center"
        android:gravity="center_horizontal">

    </TextView>


    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="15"
        android:textAlignment="center"
        android:gravity="center_horizontal">

    </EditText>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resting_time"
        android:textAlignment="center"
        android:gravity="center_horizontal">

    </TextView>


    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="10"
        android:textAlignment="center"
        android:gravity="center_horizontal">

    </EditText>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/amount_of_cycles"
        android:textAlignment="center"
        android:gravity="center_horizontal">

    </TextView>

    <EditText
        android:id="@+id/editText5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="4"
        android:textAlignment="center"
        android:gravity="center_horizontal">

    </EditText>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/repeatings"
        android:textAlignment="center"
        android:gravity="center_horizontal">

    </TextView>


    <EditText
        android:id="@+id/editText6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="4"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/rest_after_cycle"
        android:textAlignment="center"
        android:gravity="center_horizontal">

    </TextView>


    <EditText
        android:id="@+id/editText4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="30"
        android:textAlignment="center"
        android:gravity="center_horizontal">
    </EditText>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timer_name"
        android:textAlignment="center"
        android:gravity="center_horizontal">

    </TextView>
    <EditText
        android:id="@+id/editText7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Тренировка"
        android:textAlignment="center"
        android:gravity="center_horizontal"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/addTimerbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/add_timer"
            android:textSize="15sp">

        </Button>

        <Button
            android:id="@+id/colorPickerbtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/color" />
    </LinearLayout>


</LinearLayout>